--- a/templates/playlist.html
+++ b/templates/playlist.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Playlist">
   <ion-content>
+  	<a href="">test</a>
     <h1>Playlist</h1>
+	<h1>sdfsf</h1>
   </ion-content>
 </ion-view>
