--- a/templates/menu.html
+++ b/templates/menu.html
@@ -59,8 +59,15 @@
         <ion-item nav-clear>
           <input type="text" ng-model="subredditListsKeyword" ng-change="filterSubredditsList(subredditListsKeyword)" placeholder="Filter Subreddits List">
         </ion-item>
+        <ion-item nav-clear menu-close>
+          <a href="" ng-click="selectSubreddit({subreddit : 'gonewild'})">
+            Gone Wild
+          </a>
+        </ion-item>
         <ion-item nav-clear menu-close ng-repeat="item in listings">
-          {{ item.data.title }}
+          <a href="" ng-click="selectSubreddit({subreddit : item.data.display_name})">
+            {{ item.data.title }}
+          </a>
         </ion-item>
       </ion-list>
     </ion-content>
